2013-09-04  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display.c: Mouse is supported on NetBSD/x68k.

	* etc/color: Updated.

2013-09-03  Araki Ken  <arakiken@users.sf.net>

	* win32/x_window.c: AltGr+VK_OEM* which can cause WM_*_CHAR message later
	  aren't converted to Ctrl+*.

	* win32/x.h: VK_Clear (Keypad key 5) is assigned to XK_Begin.

2013-09-01  Araki Ken  <arakiken@users.sf.net>

	* configure.in, fb/x_display.c, fb/x_imagelib.c: Whether the port on
	  NetBSD is x68k or not is checked by <machine/grfioctl.h> in configure.

2013-08-29  Araki Ken  <arakiken@users.sf.net>

	* win32/x_window.c: AltGr+key is supported.

	* ml_edit.c: Minor fixes.

2013-08-27  Araki Ken  <arakiken@users.sf.net>

	* ml_edit.c:
	  - The bug which erased the end character of each line in scrolling
	    if DECSLRM set the right margin at the right end is fixed.
	  - The bug of DL/IL which scrolled the screen instead of insert or
	    delete lines from the cursor position.

	* win32/x_window.c:
	  - x_xic_filter_event() is called before win->key_pressed for
	    WM_SYSKEYDOWN message in x_window_receive_event() to make
	    Mod+XXX shortcut key settings work.
	  - Hack for AltGr is added in x_window_receive_event().

2013-08-24  Araki Ken  <arakiken@users.sf.net>

	* mkf_locale_ucs4_map.c: get_map_ucs4_to_func_for_current_locale()
	  never changes a cached map function after the first call.

	* mkf_ucs4_map.c: mkf_map_ucs4_to() doesn't cache the map functions of
	  non ISO2022 cs (GBK etc), in order not to map the following chars
	  automatically to GBK etc if a ucs4 character is mapped to the one of
	  GBK etc which doesn't exist in GB2312 etc.

2013-08-21  Araki Ken  <arakiken@users.sf.net>

	* version.h.in: 3.2.2post -> 3.2.3pre

	* ml_vt100_parser.c:
	  - OSC ? 80 h (disable sixel scrolling) is (ad-hoc) supported.
	  - A sixel next line character (-) is sent after a sixel dump.

2013-08-20  Araki Ken  <arakiken@users.sf.net>
